// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Users /> should render without users 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h3"
      size="lg"
    >
      Cluster administrative users
    </Title>
    <p>
      Grant permission to manage this cluster to users defined in your identity provider.
       
      <a
        href="https://docs.openshift.com/dedicated/4/administering_a_cluster/dedicated-admin-role.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <ButtonWithTooltip
      className="access-control-add"
      disableReason="You do not have permission to add a user. Only cluster owners, cluster editors, and organization administrators can add users."
      onClick={[Function]}
      variant="secondary"
    >
      Add user
    </ButtonWithTooltip>
    <AddUserDialog
      addUserResponse={
        Object {
          "error": false,
          "errorDetails": null,
          "errorMessage": "",
          "fulfilled": false,
          "pending": false,
        }
      }
      canAddClusterAdmin={false}
      clearAddUserResponses={[MockFunction]}
      closeModal={[MockFunction]}
      clusterID="1i4counta3holamvo1g5tp6n8p3a03bq"
      isOpen={false}
      submit={[MockFunction]}
    />
  </CardBody>
</Card>
`;

exports[`<Users /> with users should render 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h3"
      size="lg"
    >
      Cluster administrative users
    </Title>
    <p>
      Grant permission to manage this cluster to users defined in your identity provider.
       
      <a
        href="https://docs.openshift.com/dedicated/4/administering_a_cluster/dedicated-admin-role.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Table
      actions={
        Array [
          Object {
            "className": "hand-pointer",
            "onClick": [Function],
            "title": "Delete",
          },
        ]
      }
      areActionsDisabled={[Function]}
      aria-label="Users"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": <React.Fragment>
              User ID
              <Popover
                aria-label="User IDs"
                bodyContent={
                  <p>
                    User IDs are matched by the cluster's identity providers.
                  </p>
                }
                position="top"
              >
                <Button
                  isInline={true}
                  variant="plain"
                >
                  <HelpIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                </Button>
              </Popover>
            </React.Fragment>,
          },
          Object {
            "title": <React.Fragment>
              Group
              <Popover
                aria-label="Groups"
                bodyContent={
                  <p>
                    Groups are mapped to role bindings on the cluster.
                     
                    For more information check the
                     
                    <a
                      href="https://docs.openshift.com/container-platform/latest/authentication/understanding-authentication.html"
                    >
                      OpenShift 4 documentation
                    </a>
                    .
                  </p>
                }
                position="top"
              >
                <Button
                  isInline={true}
                  variant="plain"
                >
                  <HelpIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                </Button>
              </Popover>
            </React.Fragment>,
          },
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              "u1",
              "dedicated-admins",
            ],
            "userID": "u1",
          },
          Object {
            "cells": Array [
              "u2",
              "dedicated-admins",
            ],
            "userID": "u2",
          },
          Object {
            "cells": Array [
              "u2",
              "cluster-admins",
            ],
            "userID": "u2",
          },
          Object {
            "cells": Array [
              "u3",
              "cluster-admins",
            ],
            "userID": "u3",
          },
        ]
      }
      selectVariant="checkbox"
      variant="compact"
    >
      <TableHeader />
      <Component />
    </Table>
    <ButtonWithTooltip
      className="access-control-add"
      disableReason="You do not have permission to add a user. Only cluster owners, cluster editors, and organization administrators can add users."
      onClick={[Function]}
      variant="secondary"
    >
      Add user
    </ButtonWithTooltip>
    <AddUserDialog
      addUserResponse={
        Object {
          "error": false,
          "errorDetails": null,
          "errorMessage": "",
          "fulfilled": false,
          "pending": false,
        }
      }
      canAddClusterAdmin={false}
      clearAddUserResponses={[MockFunction]}
      closeModal={[MockFunction]}
      clusterID="1i4counta3holamvo1g5tp6n8p3a03bq"
      isOpen={false}
      submit={[MockFunction]}
    />
  </CardBody>
</Card>
`;
